--- a/unix/ebmbus-cmd.service
+++ b/unix/ebmbus-cmd.service
@@ -3,6 +3,7 @@ Description=openFFUcontrol remote bus interface service for ebmbus
 After=network.target ssh.service
 
 [Service]
+Type=forking
 ExecStart=/usr/bin/ebmbus-cmd
 StandardOutput=null
 StandardError=journal
